[gd_scene load_steps=3 format=3 uid="uid://ek1hpjg1gp34"]

[ext_resource type="Script" uid="uid://bt5e6fverpjmt" path="res://Effects/FrostZone/frost_zone.gd" id="1_ueki0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_apoj7"]
radius = 3.0

[node name="FrostZone" type="Area2D"]
z_index = -101
scale = Vector2(0.215, 0.215)
collision_layer = 4
collision_mask = 2
script = ExtResource("1_ueki0")

[node name="FrostSprite" type="Sprite2D" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_apoj7")

[node name="FrostParticles" type="CPUParticles2D" parent="."]
amount = 50
lifetime = 2.84
direction = Vector2(0, 1)
initial_velocity_min = 20.0
initial_velocity_max = 40.0
